@@ -14,6 +14,8 @@ ver. 0.9.0 (2007/??/??) - alpha
 - Fixed vulnerability in sshd.conf. Thanks to Daniel B. Cid
 - Expand <HOST> in ignoreregex. Thanks to Yaroslav Halchenko
 - Improved regular expressions. Thanks to Yaroslav Halchenko
+- Removed textToDns() which is not required anymore. Thanks
+  to Yaroslav Halchenko
 
 ver. 0.8.0 (2007/05/03) - stable
 ----------
